// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation renders 1`] = `
<SideNavigation
  accordion={true}
  verticalSpacing={3}
>
  <div
    className="container"
  >
    <nav
      className="verticalPadding-3 topPosition"
    >
      <ul
        className="spaced"
      >
        <li
          className="navLi"
          key=".0"
        >
          <Link
            active={false}
            href="#"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          Home
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".1"
        >
          <Link
            active={false}
            href="#one"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#one"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          One
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".2"
        >
          <Link
            active={false}
            href="#two"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#two"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          Two
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".3"
        >
          <SubMenu
            active={true}
            id="TDS-SideNavigation-3"
            isOpen={false}
            label="Threefdsfdsfds"
            onClick={[Function]}
          >
            <div
              className="mainDiv"
            >
              <button
                className="active"
                onClick={[Function]}
              >
                <Box
                  dangerouslyAddClassName="space"
                  horizontal={2}
                  inline={true}
                  tag="div"
                  vertical={3}
                >
                  <div
                    className="TDS_Box-modules__horizontalPadding-2___3hmwJ TDS_Box-modules__verticalPadding-3___Fsv37 space"
                  >
                    <ColoredTextProvider
                      colorClassName={null}
                    >
                      <div>
                        <Text
                          block={false}
                          bold={true}
                          invert={false}
                          size="medium"
                        >
                          <span
                            className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__boldFont___2MqlI TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__inheritColor___3YAyL"
                          >
                            Threefdsfdsfds
                          </span>
                        </Text>
                      </div>
                    </ColoredTextProvider>
                    <DecorativeIcon
                      size={16}
                      symbol="caretDown"
                      variant="secondary"
                    >
                      <Icon
                        aria-hidden="true"
                        size={16}
                        symbol="caretDown"
                        variant="secondary"
                      >
                        <i
                          aria-hidden="true"
                          className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size16___1pm12"
                        />
                      </Icon>
                    </DecorativeIcon>
                  </div>
                </Box>
              </button>
            </div>
          </SubMenu>
        </li>
      </ul>
    </nav>
  </div>
</SideNavigation>
`;

exports[`SideNavigation renders without vertical spacing 1`] = `
<SideNavigation
  accordion={true}
>
  <div
    className="container"
  >
    <nav
      className="topPosition"
    >
      <ul
        className="spaced"
      >
        <li
          className="navLi"
          key=".0"
        >
          <Link
            active={false}
            href="#"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__inheritColor___3YAyL"
                        >
                          Home
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".1"
        >
          <SubMenu
            active={true}
            id="TDS-SideNavigation-1"
            isOpen={false}
            label="Threefdsfdsfds"
            onClick={[Function]}
          >
            <div
              className="mainDiv"
            >
              <button
                className="active"
                onClick={[Function]}
              >
                <Box
                  dangerouslyAddClassName="space"
                  horizontal={2}
                  inline={true}
                  tag="div"
                  vertical={3}
                >
                  <div
                    className="TDS_Box-modules__horizontalPadding-2___3hmwJ TDS_Box-modules__verticalPadding-3___Fsv37 space"
                  >
                    <ColoredTextProvider
                      colorClassName={null}
                    >
                      <div>
                        <Text
                          block={false}
                          bold={true}
                          invert={false}
                          size="medium"
                        >
                          <span
                            className="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__boldFont___2MqlI TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__inheritColor___3YAyL"
                          >
                            Threefdsfdsfds
                          </span>
                        </Text>
                      </div>
                    </ColoredTextProvider>
                    <DecorativeIcon
                      size={16}
                      symbol="caretDown"
                      variant="secondary"
                    >
                      <Icon
                        aria-hidden="true"
                        size={16}
                        symbol="caretDown"
                        variant="secondary"
                      >
                        <i
                          aria-hidden="true"
                          className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size16___1pm12"
                        />
                      </Icon>
                    </DecorativeIcon>
                  </div>
                </Box>
              </button>
            </div>
          </SubMenu>
        </li>
      </ul>
    </nav>
  </div>
</SideNavigation>
`;
